--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,9 @@ spring.datasource.username=root
 spring.datasource.password=
 
 #Exibe os comandos SQL
-spring.jpa.propriedades.hibernate.show_sql=true
-spring.jpa.propriedades.hibernate.user_sql_comments=true
-spring.jpa.propriedades.hibernate.format_sql=true
-spring.jpa.propriedades.hibernate.type=trace
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.user_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
+
+security.basic.enabled=false
