--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profile.active=dev
+
 #MySQL
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database=MYSQL
@@ -11,7 +13,10 @@ spring.jpa.properties.hibernate.user_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
 
-security.basic.enabled=false
-
 #paginacao
 paginacao.qtd_por_pagina=25
+
+# JWT
+jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
+# token com duração de 7 dias
+jwt.expiration=604800
