--- a/ponto-inteligente-front/package.json
+++ b/ponto-inteligente-front/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "hammer": "0.0.5",
     "js": "^0.1.0",
+    "moment": "^2.23.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
