--- a/ponto-inteligente-back/src/main/resources/application.properties
+++ b/ponto-inteligente-back/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.username=root
 spring.datasource.password=
 
 #Exibe os comandos SQL
-spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.user_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
